Bug 5423 - Changed the smart splitter CSS to use plain pointer cursor for collapsed splitters. r=komi
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@8452 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/app/skin/bindings/smartsplitter.css
+++ b/app/skin/bindings/smartsplitter.css
@@ -107,11 +107,15 @@ sb-smart-splitter[orient="vertical"][state="collapsed"]
 }
 
 /** When collapsed, show a pointer since it's click to open **/
+splitter:not([orient="vertical"])[state="collapsed"],
+sb-smart-splitter:not([orient="vertical"])[state="collapsed"],
 splitter:not([orient="vertical"])[state="collapsed"] > grippy,
 sb-smart-splitter:not([orient="vertical"])[state="collapsed"] > grippy
 {
   cursor: pointer !important;
 }
+splitter[orient="vertical"][state="collapsed"],
+sb-smart-splitter[orient="vertical"][state="collapsed"],
 splitter[orient="vertical"][state="collapsed"] > grippy,
 sb-smart-splitter[orient="vertical"][state="collapsed"] > grippy
 {
